refactor: Domain에서 직접 자식들 관리